--- a/Week_1/Index.html
+++ b/Week_1/Index.html
@@ -16,7 +16,7 @@
 <body>
 	<p>This is a paragraph with some basic markup within it. <em>This is a paragraph woth some basic markup within it.</em> This is a paragraph with some basic markup within it. This is a <strong>paragraph</strong> with some basic markup within it. This is a paragraph with some basic markup within it. This is a paragraph with some basic markup within it.
 
-	<p>This is a paragraph with some line breaks in it. <br><br>Use with caution, never use break tags to change the presentation, there should be a semantic reason for using them.</p>
+	<p>This is a paragraph with some line breaks in it. <br>Use with caution, never use break tags to change the presentation, there should be a semantic reason for using them.</p>
 
 	<h1>This is an H1 Heading</h1>
 	<h2>This is an H1 Heading</h2>
@@ -61,4 +61,4 @@
 	<hr id="bottom">
 	<img src="https://upload.wikimedia.org/wikipedia/commons/4/43/07._Camel_Profile,_near_Silverton,_NSW,_07.07.2007.jpg" alt="Camel!" tile="Cool Camel" width=500px>
 	<img src="llamasAtopHill.jpg" alt="LLama Drama">
-	
+
