Got css working! will finish wireframing after class

--- a/Week_2/Homework/Simple_Recipe_Wireframe.html
+++ b/Week_2/Homework/Simple_Recipe_Wireframe.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title> Simple Recipe </title>
+	<style type="text/css">
+		* {
+			font-family: 'Helvetica Nue', Arial, sans-serif;
+		}
+		div {
+            background-color: rgba(0, 200, 0, 0.2);
+		}
+		.Thumbnail{
+            width: 295px;
+            height: 390px;
+            float: left;
+        }
+
+	</style>
 </head>
 <body>
 
@@ -15,6 +30,7 @@
 
 <head>
 	<h2> Ingredients </h2>
+	<div class="Thumbnail"> 
 	<ul>
 		<li>Vegetable oil</li>
 		<li>1 tablespoon kosher salt plus 1 1/2 teaspoons</li>
@@ -31,6 +47,7 @@
 		<li>1/8 teaspoon hot red pepper flakes</li>
 	</ul>
 </head>
+	</div>
 
 <head>
 	<h2>Directions</h2>
@@ -41,3 +58,4 @@
 
 <footer>Copyright 2002, Barefoot Contessa Family Style, All Rights Reserved</footer>
 </body>
+</html>
