Added padding and line spacing

--- a/Week_3/Homework/Simple_Recipe_Wireframe.html
+++ b/Week_3/Homework/Simple_Recipe_Wireframe.html
@@ -10,8 +10,6 @@
 			text-align: center;
 			display: block;
 			background-color: cornsilk;
-
-
 		}
 		
 		div.Sidebar {
@@ -41,24 +39,22 @@
         }
 
         div.Main p{
-        	padding-right: 3px;
+        	padding-right: 20px;
+        	line-height: 2;
         }
 
         div.Main h2{
         	text-align: center;
         }
 
-        img{
+        div.PASTA{
         	/* Original dimensions are 800px by 450px */
-        	float: center;
-        	width: 1264px
-        	height: 450px;
-        	padding-left: 232px;
-        	padding-right: 232px;
+        	text-align: center;
         	padding-bottom: 10px;
         }
 
         footer{
+        	bottom: 0px;
         	text-align: center;
         	background: lightgray;
         }
@@ -70,7 +66,9 @@
 	<h1> Linguine with Shrimp Scampi </h1>
 <p>Pasta served with Shrimp</p>
 </div>
-<img src="Pasta_Pic.jpg"/>
+<div class="PASTA">
+	<img src="Pasta_Pic.jpg"/>
+</div>
 <div class="Sidebar"> 
 <head>
 	<h2> Ingredients </h2>
