--- a/Midterm_CyclingGeeks/index.html
+++ b/Midterm_CyclingGeeks/index.html
@@ -53,13 +53,60 @@
 			text-align: center;
 		}
 
+		header{
+			display: inline-block;
+			background: lightgrey;
+			width: 100%;
+			height: 80px;
+		}
+
+		h1{
+			float: left;
+		}
+		
+		h2{
+			text-align: center;
+		}
+
+		img{
+			width: 150px;
+			float: left;
+		}
+		nav ul {
+			float: right;
+	        list-style-type: none;
+	        text-align: right;
+	        line-height: 100px;
+    	}
+    
+	    nav ul li {
+	        display: inline-block;
+	        margin: auto -2px;
+	    }
+	    
+	    nav ul li a {
+	        display: block;
+	        padding: 0 20px;
+	        text-decoration: none;
+	    }
 
 	</style>
 
 <body>
+<header>
 <div class="NavBar">
+	<img src="Images/navbar_image.png"/>
 	<h1> NYC Cycling Geeks </h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+                <li><a href="#">Trails</a></li>
+                <li><a href="#">Newbies</a></li>
+			</ul>
+		</nav>
 </div>
+</header>
+
 
 	<h2>About Us</h2>
 
@@ -77,5 +124,7 @@
 <div class="Container3">
 	<h3>NYC Cycling Laws</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+
+
 </body>
 </html>
