--- a/Midterm_CyclingGeeks/index.html
+++ b/Midterm_CyclingGeeks/index.html
@@ -1,43 +1,135 @@
 <!DOCTYPE html>
 <html>
-
 <link rel="stylesheet" type="text/css" href="css/index_style.css">
+<title> Cycling Geeks </title>
+<style type="text/css">
+* {
+    margin: 0;
+    padding: 0;
+}
 
-	<title> Cycling Geeks </title>
+header {
+    max-height: 60px;
+    line-height: 50px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 5%;
+    margin: 0;
+    position: fixed;
+    top: 0;
+}
+
+header img,
+header h1,
+header nav,
+header nav ul li {
+    display: inline-block;
+}
+
+header img {
+    max-height: 50px;
+    vertical-align: middle;
+}
+
+header h1 {
+    margin: 0;
+    padding: 0;
+}
+
+header nav {
+    float: right;
+}
+
+
+/*from demo*/
+
+nav ul {
+    list-style: none;
+    /*this float kills the container divs wrapping, think using lack of clearfix to our advantage*/
+    float: left;
+}
+
+nav ul li {
+    width: 100px;
+    float: left;
+}
+
+nav ul li:hover {
+    background-color: #AAA;
+}
+
+
+/* make the anchor tags in nav display block for clickability */
+
+nav ul a {
+    display: block;
+    color: #222;
+    text-decoration: none;
+    line-height: 30px;
+    padding: 15px;
+    text-align: center;
+}
+
+
+/* hide sublists by default */
+
+nav ul ul {
+    display: none;
+    background: #DDD;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul ul li {
+    width: 200px;
+    padding-left: 10px;
+}
+
+nav ul li:hover ul li:hover {
+    background-color: #999;
+}
+
+main{
+	width:90%;
+	margin:0 auto;
+	padding:50px;
+}
+</style>
 
 <body>
-<header class="Navigation">
-<div class="NavBar clearfix">
-	<img src="Images/navbar_image.png"/>
-	<h1> NYC Cycling Geeks </h1>
-		<nav class="clearfix">
-			<ul>
-				<li><a href="newbies.html">Newbies</a></li>
-                <li><a href="#">Trails</a></li>
+    <header class="Navigation">
+        <img src="Images/navbar_image.png" />
+        <h1> NYC Cycling Geeks </h1>
+        <nav>
+            <ul>
+                <li><a href="newbies.html">Newbies</a></li>
+                <li><a href="#">Trails</a>
+                    <ul>
+                        <li>A Trail!</li>
+                        <li>A Trail!</li>
+                    </ul>
+                </li>
                 <li><a href="index.html">Home</a></li>
-			</ul>
-		</nav>
-</div>
-</header>
-
-
-	<h2>About Us</h2>
-
-
-<div class="Container1 clearfix">
-	<h3>Who We Are</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
-</div>
-
-<div class="Container2">
-	<h3>About the Site</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
-</div>
-
-<div class="Container3">
-	<h3>NYC Cycling Laws</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
-
-
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>About Us</h2>
+        <div class="Container1 clearfix">
+            <h3>Who We Are</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+        </div>
+        <div class="Container2">
+            <h3>About the Site</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+        </div>
+        <div class="Container3">
+            <h3>NYC Cycling Laws</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+        </div>
+    </main>
 </body>
+
 </html>
