--- a/Midterm_CyclingGeeks/newbies.html
+++ b/Midterm_CyclingGeeks/newbies.html
@@ -6,7 +6,7 @@
 	<title> Cycling Geeks </title>
 
 <body>
-<header class="Navigation">
+<header class="Navigation clearfix">
 <div class="NavBar clearfix">
 	<img src="Images/navbar_image.png"/>
 	<h1> NYC Cycling Geeks </h1>
@@ -20,13 +20,15 @@
 </div>
 </header>
 
-<div class="container1 clearfix">
-	<h2>Getting Started</h2>
+<div class="container1">
+	<h2>
+		Getting Started
+	</h2>
 	<img src="http://www.fillmurray.com/600/300">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
 
-<div class="container2 clearfix">
+<div class="container2">
 	<h2>
 		Finding Your Bike
 	</h2>
@@ -34,22 +36,20 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
 	
-<div class="sidebar clearfix">
+<div class="sidebar">
+	<div class="header">
 	<header>
 		<h2>Links</h2>
 	</header>
-			<li>
-				Shops
-			</li>
+	</div>
+				<p>Shops:<p>
 				<ul>
 					<li><a href="#">Shop1</a></li>
 					<li><a href="#">Shop2</a></li>
 					<li><a href="#">Shop3</a></li>
 					<li><a href="#">Shop4</a></li>
 				</ul>
-			<li>
-				Clubs
-			</li>
+				<p>Clubs:<p>
 				<ul>
 					<li><a href="#">Club1</a></li>
 					<li><a href="#">Club2</a></li>
