--- a/Midterm_CyclingGeeks/index.html
+++ b/Midterm_CyclingGeeks/index.html
@@ -83,8 +83,9 @@ nav ul li:hover > ul {
 }
 
 nav ul ul li {
-    width: 200px;
+    width: 300px;
     padding-left: 10px;
+    overflow: hidden;
 }
 
 nav ul li:hover ul li:hover {
@@ -104,14 +105,14 @@ main{
         <h1> NYC Cycling Geeks </h1>
         <nav>
             <ul>
-                <li><a href="newbies.html">Newbies</a></li>
+ 				<li><a href="index.html">Home</a></li>
                 <li><a href="#">Trails</a>
                     <ul>
-                        <li>A Trail!</li>
-                        <li>A Trail!</li>
+                        <li><a href="#">A Trail!</a></li>
+                        <li><a href="#">A Trail!</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="newbies.html">Newbies</a></li>
             </ul>
         </nav>
     </header>
