--- a/Midterm_CyclingGeeks/newbies.html
+++ b/Midterm_CyclingGeeks/newbies.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <link rel="stylesheet" type="text/css" href="css/newbies_style.css">
 
 	<title> Cycling Geeks </title>
 
 <body>
-<header class="Navigation clearfix">
-<div class="NavBar clearfix">
-	<img src="Images/navbar_image.png"/>
-	<h1> NYC Cycling Geeks </h1>
-		<nav class="clearfix">
-			<ul>
-				<li><a href="newbies.html">Newbies</a></li>
-                <li><a href="#">Trails</a></li>
-                <li><a href="index.html">Home</a></li>
-			</ul>
-		</nav>
-</div>
+<header class="Navigation">
+        <a href="index.html"><img src="Images/navbar_image.png"/></a>
+        <h1> NYC Cycling Geeks </h1>
+        <nav>
+            <ul>
+ 				<li><a href="index.html">Home</a></li>
+                <li><a>Trails</a>
+                    <ul>
+                        <li><a href="Bike Trails/CunninghamPark.html">Cunningham Park</a></li>
+                        <li><a href="Bike Trails/HighBridgePark.html">High Bridge</a></li>
+                        <li><a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a></li>
+                    </ul>
+                </li>
+                <li><a href="newbies.html">Newbies</a></li>
+            </ul>
+        </nav>
 </header>
+
+<main>
 
 <div class="container1">
 	<h2>
-		Getting Started
+		For Those Who are Just Getting Into the Scene
 	</h2>
-	<img src="http://www.fillmurray.com/600/300">
+	<img src="Images/rsz_1getting_started.jpg">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
 
@@ -32,32 +38,30 @@
 	<h2>
 		Finding Your Bike
 	</h2>
-	<img src="http://www.fillmurray.com/600/300"">
+	<img src="Images/Finding_Bike.jpg">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
-	
+	</main>
 <div class="sidebar">
 	<div class="header">
-	<header>
 		<h2>Links</h2>
-	</header>
 	</div>
 				<p>Shops:<p>
 				<ul>
-					<li><a href="#">Shop1</a></li>
-					<li><a href="#">Shop2</a></li>
-					<li><a href="#">Shop3</a></li>
-					<li><a href="#">Shop4</a></li>
+					<li><a href="http://bicyclehabitat.com/">Bicycle Habitat (Manhattan)</a></li>
+					<li><a href="http://www.fultonbikes.com/">Fulton Bikes (Brooklyn)</a></li>
+					<li><a href="http://www.spincitycycle.com/">Spin City Cycle (Queens)</a></li>
+					<li><a href="http://treadbikeshop.com/">Tread Bike Shop (Bronx)</a></li>
+					<li><a href="http://www.nycbicycleshop.com/">NYC Bicycle Shop (Staten Island)</a></li>
 				</ul>
 				<p>Clubs:<p>
 				<ul>
-					<li><a href="#">Club1</a></li>
-					<li><a href="#">Club2</a></li>
-					<li><a href="#">Club3</a></li>
-					<li><a href="#">Club4</a></li>
+					<li><a href="https://nycc.org/">New York Cycle Club</a></li>
+					<li><a href="https://www.5bbc.org/">5 Borough Bicycle Club</a></li>
+					<li><a href="http://www.crca.net/">Century Road Club Association</a></li>
+					<li><a href="http://www.bike.nyc/">Bike New York</a></li>
+					<li><a href="https://www.facebook.com/WEBikeNYC">WE Bike (Women Only)</a></li>
 				</ul>
-</div>
-	
 </div>
 </body>
 </html>
