--- a/Midterm_CyclingGeeks/Bike Trails/HighBridgePark.html
+++ b/Midterm_CyclingGeeks/Bike Trails/HighBridgePark.html
@@ -26,18 +26,18 @@
 <main>
 
 <div class="container1">
-	<h1>Cunningham Park</h1>
+	<h1>High Bridge Park</h1>
 	<ul>
 		<li><strong>Bike Type:</strong> Mountain</li>
-		<li><strong>Difficulty:</strong> 1/3rd easy, 1/3rd intermediate, and 1/3rd expert</li>
-		<li><strong>Length:</strong> 6.5 miles</li>
-		<li><strong>Location:</strong> Fresh Meadows, Queens, NY</li>
+		<li><strong>Difficulty:</strong> 25% beginner, 25% intermediate, 50% expert</li>
+		<li><strong>Length:</strong> 3 miles</li>
+		<li><strong>Location:</strong> Washington Heights, Manhattan, NY</li>
 		<li><strong>Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis vestibulum justo, non lacinia lacus congue non. Etiam consectetur sem mattis rhoncus cursus. Sed commodo porta tellus, nec convallis metus convallis quis. Cras tortor ante, egestas venenatis mauris imperdiet, porta aliquet nibh. Quisque id nibh vel tellus feugiat elementum. Ut euismod nulla eu eleifend mollis. Vestibulum consequat ultrices pulvinar. Praesent eu neque dolor. Nam feugiat turpis nec consequat egestas. Cras fringilla erat sit amet imperdiet maximus. Mauris suscipit ultrices hendrerit. Phasellus dictum convallis urna non feugiat.</li>
 	</ul>
 </div>
 
 <div class="Map">
-	<img src="../Images/CunnunghamPark_img.png">
+	<img src="../Images/highbridge-trail-map.gif">
 </div>
 
 <!-- <div class="Thumbnail">
