--- a/Final/veterans.html
+++ b/Final/veterans.html
@@ -6,6 +6,11 @@
 	<title> Cycling Geeks </title>
 
 <body>
+
+<div class="heading">
+	<h1>VETERANS</h1>
+</div>
+
 <header class="Navigation">
         <a href="index.html"><img src="Images/navbar_image.png"/></a>
         <h1> NYC Cycling Geeks </h1>
@@ -25,54 +30,89 @@
         </nav>
 </header>
 
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="index.html">Home</a>
+  <a href="veterans.html">Veterans</a>
+  <button class="accordion"><a>Trails</a></button>
+  <div class="panel">
+    <a href="Bike Trails/CunninghamPark.html">Cunningham</a>
+    <a href="Bike Trails/HighBridgePark.html">High Bridge</a>
+    <a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a>
+  </div>
+  <a href="newbies.html">Newbies</a>
+</div>
+
+<span class="hamburger" onclick="openNav()">
+    <div></div>
+    <div></div>
+    <div></div>
+</span>
+
+<div id="main">
+
 <main>
 
 <div class="container1">
 	<h2>
 		5 Borough Bicycle Tour
 	</h2>
-	<img src="Images/rsz_1getting_started.jpg">
+	<img src="Images/5-boro-tour.jpg">
+	<ul>
+		<li><strong>Length: </strong>40 miles</li>
+		<li><strong>Register Here: </strong><a href="http://www.bike.nyc/events/td-five-boro-bike-tour/" target="_blank">bike.nyc</a></li>
+	</ul>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
 
-<div class="container2">
+<div class="container1">
 	<h2>
 		Escape New York - 2017
 	</h2>
-	<img src="Images/Finding_Bike.jpg">
+	<img src="Images/EscapeNewYork.jpg">
+	<ul>
+		<li><strong>Length: </strong>25-100 miles (choose your starting point!)</li>
+		<li><strong>Register Here: </strong><a href="https://nycc.org/eny2017" target="_blank">nycc.org</a></li>
+	</ul>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
 
-
 	</main>
-
-
-<div class="sidebar">
-	<div class="header">
-		<h2>Latest News</h2>
-	</div>
-				<p>Shops:<p>
-				<ul>
-					<li><a href="http://bicyclehabitat.com/">Bicycle Habitat (Manhattan)</a></li>
-					<li><a href="http://www.fultonbikes.com/">Fulton Bikes (Brooklyn)</a></li>
-					<li><a href="http://www.spincitycycle.com/">Spin City Cycle (Queens)</a></li>
-					<li><a href="http://treadbikeshop.com/">Tread Bike Shop (Bronx)</a></li>
-					<li><a href="http://www.nycbicycleshop.com/">NYC Bicycle Shop (Staten Island)</a></li>
-				</ul>
-				<p>Clubs:<p>
-				<ul>
-					<li><a href="https://nycc.org/">New York Cycle Club</a></li>
-					<li><a href="https://www.5bbc.org/">5 Borough Bicycle Club</a></li>
-					<li><a href="http://www.crca.net/">Century Road Club Association</a></li>
-					<li><a href="http://www.bike.nyc/">Bike New York</a></li>
-					<li><a href="https://www.facebook.com/WEBikeNYC">WE Bike (Women Only)</a></li>
-				</ul>
+<div class="heading1">
+		<h1>Latest News</h1>
 </div>
 
-<footer>
-	<h3>Repair Shops</h3>
-</footer>
+<main>
 
+	<div class="container1">
+		<h2>
+			Bronzini: I'm going to retire when I feel like it
+		</h2>
+	<img src="Images/latestNews-1.jpg">
+	<ul>
+		<li><strong>Date: </strong> May 13, 2017</li>
+		<li><strong>Read More: </strong><a href="http://www.cyclingnews.com/news/bronzini-im-going-to-retire-when-i-feel-like-it/" target="_blank">cyclingnews.com</a></li>
+	</ul>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
+	
+	</div> 
+
+	<div class="container1">
+		<h2>
+			Giro d'Italia: Stage 8 highlights - Video
+		</h2>
+		<iframe width="650" height="365.625" src="https://www.youtube.com/embed/iKmGR1rNhio" frameborder="0" allowfullscreen></iframe>
+	<ul>
+		<li><strong>Date: </strong> May 13, 2017</li>
+	</ul>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
+
+
+</main>	
+
+</div>
+
+<script type="text/javascript" src="js/veterans.js"></script>
 
 </body>
 
