--- a/Final/Bike Trails/WolfesPond.html
+++ b/Final/Bike Trails/WolfesPond.html
@@ -3,9 +3,48 @@
 
 <link rel="stylesheet" type="text/css" href="../css/BikeTrails_style.css">
 
-	<title> Cycling Geeks </title>
+<head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {
+    display:none
+}
+.w3-left, .w3-right, .w3-badge {
+    cursor:pointer
+}
+.w3-badge {
+    height:13px;
+    width:13px;
+    padding:0
+}
+
+.w3-container{
+    margin-top: 1.5%;
+    margin-bottom: 5%;
+}
+
+</style>
+
+
+<style type="text/css">
+        @import url('https://fonts.googleapis.com/css?family=Limelight');
+
+        .heading{
+            background-image: url(../Images/WolfesPond-Header.jpg); 
+        }
+
+        .heading h1{
+            font-family: 'Limelight', Arial;
+        }
+    </style>
+</head>
+
+<title> Cycling Geeks </title>
 
 <body>
+
 <header class="Navigation">
         <a href="../index.html"><img src="../Images/navbar_image.png"/></a>
         <h1> NYC Cycling Geeks </h1>
@@ -24,27 +63,61 @@
             </ul>
         </nav>
  </header>
+
+<div class="heading">
+    <h1>Wolfe's Pond</h1>
+</div>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="../index.html">Home</a>
+  <a href="../veterans.html">Veterans</a>
+  <button class="accordion"><a>Trails</a></button>
+  <div class="panel">
+    <a href="CunninghamPark.html">Cunningham</a>
+    <a href="HighBridgePark.html">High Bridge</a>
+    <a href="WolfesPond.html">Wolfe's Pond</a>
+  </div>
+  <a href="../newbies.html">Newbies</a>
+</div>
+
+ <span class="hamburger" onclick="openNav()">
+    <div></div>
+    <div></div>
+    <div></div>
+</span>
+
 <main>
 
 <div class="container1">
-	<h1>Wolfe's Pond</h1>
 	<ul>
+        <!-- All Information provided by: http://www.nycmtb.com/?page_id=289 -->
 		<li><strong>Bike Type:</strong> Mountain</li>
-		<li><strong>Difficulty:</strong> 50% Beginner, 50% Intermediate</li>
+		<li><strong>Difficulty:</strong> 50% Noob, 50% Experienced</li>
 		<li><strong>Length:</strong> 4 miles</li>
 		<li><strong>Location:</strong> Tottenville, Staten Island, NY</li>
-		<li><strong>Description:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sagittis vestibulum justo, non lacinia lacus congue non. Etiam consectetur sem mattis rhoncus cursus. Sed commodo porta tellus, nec convallis metus convallis quis. Cras tortor ante, egestas venenatis mauris imperdiet, porta aliquet nibh. Quisque id nibh vel tellus feugiat elementum. Ut euismod nulla eu eleifend mollis. Vestibulum consequat ultrices pulvinar. Praesent eu neque dolor. Nam feugiat turpis nec consequat egestas. Cras fringilla erat sit amet imperdiet maximus. Mauris suscipit ultrices hendrerit. Phasellus dictum convallis urna non feugiat.</li>
+		<li><strong>Description:</strong> Wolfe’s Pond Park mixes a spectacular natural park environment with interesting trails that wind through the glacial ponds and native forest of this oceanfront park. Wolfe’s Pond is perfect for new mountain bikers and families looking for an enjoyable ride through the woods, as well as for intermediate riders interested in progressing their skills on the short steep climbs and twisty and rooty intermediate trails. The trails are still a work in progress, but the existing trails are open to riding, and dirt jump park is in the works for 2009.</li>
 	</ul>
 </div>
 
-<div class="Map">
-	<img src="../Images/wolfes-pond-trail-map.png">
+<div class="w3-container">
+
+<div class="w3-content w3-display-container" style="max-width:700px">
+  <img class="mySlides" src="../Images/WolfesPond-1.jpg" style="width:100%">
+  <img class="mySlides" src="../Images/WolfesPond-2.jpg" style="width:100%;">
+  <iframe class="mySlides" width="700" height="393.75" src="https://www.youtube.com/embed/Swb0ugMvPb0" frameborder="0" allowfullscreen></iframe>
+  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+  </div>
 </div>
 
-<!-- <div class="Thumbnail">
-	<a href="#"><p>Gallery</p></a>
-</div> -->
-
 </main>
+
+<script type="text/javascript" src="../js/BikeTrails.js"></script>
+
 </body>
 </html>
