--- a/Final/index.html
+++ b/Final/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+
 <link rel="stylesheet" type="text/css" href="css/index_style.css">
 <title> Cycling Geeks </title>
 
+</head>
+
 <body>
+
+<div class="heading">
+    <h1>Home</h1>
+</div>
+
     <header class="Navigation">
         <a href="index.html"><img src="Images/navbar_image.png"/></a>
         <h1> NYC Cycling Geeks </h1>
@@ -23,39 +32,74 @@
             </ul>
         </nav>
     </header>
-    <main>
+
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="index.html">Home</a>
+  <a href="veterans.html">Veterans</a>
+  <button class="accordion"><a>Trails</a></button>
+  <div class="panel">
+    <a href="Bike Trails/CunninghamPark.html">Cunningham</a>
+    <a href="Bike Trails/HighBridgePark.html">High Bridge</a>
+    <a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a>
+  </div>
+  <a href="newbies.html">Newbies</a>
+</div>
+
+<!-- Use any element to open the sidenav -->
+<span class="hamburger" onclick="openNav();">
+    <div></div>
+    <div></div>
+    <div></div>
+</span>
+
+<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+<div id="main">
+   <main>
 
         <h2>About Us</h2>
-
-         <div class="Image1">
-            <img src="Images/rsz_who_we_are.jpg">
-        </div>
-
+            
         <div class="Container1">
+            <div class="float_left">
             <h3>Who We Are</h3>
+            </div>
+            <div class="Image1">
+                <img src="Images/rsz_who_we_are.jpg">
+            </div>
+            <div class="float_left">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
-        </div>
-
-        <div class="Image2">
-            <img src="Images/rsz_about_the_site.jpg">
-        </div>
+            </div>
+        </div>     
 
         <div class="Container2">
+            <div class="float_right">
             <h3>About the Site</h3>
+            </div>
+            <div class="Image2">
+                <img src="Images/rsz_about_the_site.jpg">
+            </div>
+            <div class="float_right">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
-        </div>
-
-        
-        <div class="Image3">
-            <img src="Images/rsz_nyc_laws.jpg">
+            </div>
         </div>
 
         <div class="Container3">
+            <div class="float_left">
             <h3>NYC Cycling Laws</h3>
+            </div>
+            <div class="Image3">
+                <img src="Images/rsz_nyc_laws.jpg">
+            </div>
+            <div class="float_left">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et mi et ipsum ultrices suscipit. Praesent condimentum urna in massa aliquet, sit amet rutrum lorem tincidunt. Quisque faucibus porttitor tellus, sit amet mattis ante porttitor gravida. Fusce fermentum rhoncus tempus. Nullam eu fermentum neque, nec consequat quam. Quisque fermentum metus quis felis fringilla fringilla eget eu nibh. Vestibulum viverra ex vel rutrum hendrerit. Nullam nec lectus vel risus semper lacinia sit amet ac magna.</p>
+            </div>
         </div>
 
     </main>
+</div>
+
+<script type="text/javascript" src="js/index.js"></script>
+
 </body>
 
 </html>
