--- a/Final/newbies.html
+++ b/Final/newbies.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="stylesheet" type="text/css" href="css/newbies_style.css">
+<head>
 
-	<title> Cycling Geeks </title>
+<link rel="stylesheet" type="text/css" href="css/newbies_style.css">
+<title> Cycling Geeks </title>
+
+</head>
 
 <body>
+
+<div class="heading">
+    <h1>Noobs</h1>
+</div>
+
 <header class="Navigation">
         <a href="index.html"><img src="Images/navbar_image.png"/></a>
         <h1> NYC Cycling Geeks </h1>
@@ -25,7 +33,30 @@
         </nav>
 </header>
 
-<main>
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="index.html">Home</a>
+  <a href="veterans.html">Veterans</a>
+  <button class="accordion"><a>Trails</a></button>
+  <div class="panel">
+    <a href="Bike Trails/CunninghamPark.html">Cunningham</a>
+    <a href="Bike Trails/HighBridgePark.html">High Bridge</a>
+    <a href="Bike Trails/WolfesPond.html">Wolfe's Pond</a>
+  </div>
+  <a href="newbies.html">Newbies</a>
+</div>
+
+<!-- Use any element to open the sidenav -->
+<span class="hamburger" onclick="openNav();">
+    <div></div>
+    <div></div>
+    <div></div>
+</span>
+
+<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+<div id="main">
+
+<main id="content">
 
 <div class="container1">
 	<h2>
@@ -42,27 +73,68 @@
 	<img src="Images/Finding_Bike.jpg">
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquam ex id molestie dapibus. Mauris pretium iaculis tellus, vel vulputate metus luctus at. Curabitur suscipit mi quam, a vehicula leo viverra nec. Donec scelerisque nunc eu consectetur semper. Phasellus leo dui, maximus sit amet neque vitae, pharetra porttitor urna. Nam ultrices sit amet lorem sed mollis. Sed tristique turpis enim, vel accumsan mi aliquam eget. Pellentesque elementum sapien at tempor imperdiet. Donec dapibus blandit nunc. Aliquam vel porta dui. Duis cursus, sapien a suscipit dignissim, velit purus ullamcorper arcu, ut dignissim odio eros quis ex. Etiam eget ligula ultricies, fermentum tortor ut, lobortis metus. Pellentesque sagittis erat in enim aliquam tristique. Maecenas rutrum accumsan diam. Curabitur et sem vel sem laoreet malesuada sit amet ut dui.</p>
 </div>
+
 	</main>
 <div class="sidebar">
 	<div class="header">
-		<h2>Links</h2>
+		<h2>Cool Stuff:</h2>
 	</div>
-				<p>Shops:<p>
+				<p>Shops<p>
 				<ul>
-					<li><a href="http://bicyclehabitat.com/">Bicycle Habitat (Manhattan)</a></li>
-					<li><a href="http://www.fultonbikes.com/">Fulton Bikes (Brooklyn)</a></li>
-					<li><a href="http://www.spincitycycle.com/">Spin City Cycle (Queens)</a></li>
-					<li><a href="http://treadbikeshop.com/">Tread Bike Shop (Bronx)</a></li>
-					<li><a href="http://www.nycbicycleshop.com/">NYC Bicycle Shop (Staten Island)</a></li>
+					<li><a href="http://bicyclehabitat.com/" target="_blank">Bicycle Habitat (Manhattan)</a></li>
+					<li><a href="http://www.fultonbikes.com/" target="_blank">Fulton Bikes (Brooklyn)</a></li>
+					<li><a href="http://www.spincitycycle.com/" target="_blank">Spin City Cycle (Queens)</a></li>
+					<li><a href="http://treadbikeshop.com/" target="_blank">Tread Bike Shop (Bronx)</a></li>
+					<li><a href="http://www.nycbicycleshop.com/" target="_blank">NYC Bicycle Shop (Staten Island)</a></li>
 				</ul>
-				<p>Clubs:<p>
+				<p>Clubs<p>
 				<ul>
-					<li><a href="https://nycc.org/">New York Cycle Club</a></li>
-					<li><a href="https://www.5bbc.org/">5 Borough Bicycle Club</a></li>
-					<li><a href="http://www.crca.net/">Century Road Club Association</a></li>
-					<li><a href="http://www.bike.nyc/">Bike New York</a></li>
-					<li><a href="https://www.facebook.com/WEBikeNYC">WE Bike (Women Only)</a></li>
+					<li><a href="https://nycc.org/" target="_blank">New York Cycle Club</a></li>
+					<li><a href="https://www.5bbc.org/" target="_blank">5 Borough Bicycle Club</a></li>
+					<li><a href="http://www.crca.net/" target="_blank">Century Road Club Association</a></li>
+					<li><a href="http://www.bike.nyc/" target="_blank">Bike New York</a></li>
+					<li><a href="https://www.facebook.com/WEBikeNYC" target="_blank">WE Bike (Women Only)</a></li>
 				</ul>
 </div>
+
+</div>
+
+<script type="text/javascript" src="js/newbies.js"></script> 
+
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script type="text/javascript">
+// code provided by stackoverflow    
+var fixSide = $('.sidebar').offset().top;
+
+$(window).scroll(function() {                  
+
+    var Scroll = $(window).scrollTop();
+
+    if (Scroll >= fixSide) {
+    	$('.sidebar').css({
+    		top: '0'
+    	});
+    } else {
+    	$('sidebar').css({
+    		top: '180px'
+    	});
+    }
+
+    if (Scroll <= fixSide) {
+    	$('.sidebar').css({
+    		top: '180px'
+    	});
+    } else {
+    	$('sidebar').css({
+    		top: '0'
+    	});
+    }
+});
+
+</script>
+
 </body>
 </html>
